--- a/style.css
+++ b/style.css
@@ -12,9 +12,30 @@ body,html{
     color:#fff;
 }
 .date,.hr,.min,.sec,.zone{
-    border-radius: 10px;
+    border-radius: 5%;
     box-shadow: 0em 0em 0.5em  #0f0 inset;
     display: inline;
     padding:30px;
     margin-left:5px;
+}
+@media screen and (max-width:680px){
+    body,html{
+        background-color:#000;
+    }
+    .clock{
+        width: 100%;
+        height: 100px;
+        margin:30px auto;
+        font-size: 15px;
+        text-align: center;
+        padding-top:20%;
+        color:#fff;
+    }
+    .date,.hr,.min,.sec,.zone{
+        border-radius: 5%;
+        box-shadow: 0em 0em 0.5em  #0f0 inset;
+        display: inline;
+        padding:30px;
+        margin-left:3px;
+    }
 }
