--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body,html{
     .clock{
         width: 100%;
         height: 100px;
+        max-width: 100%;
         margin:30px auto;
         font-size: 15px;
         text-align: center;
