--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body,html{
 .clock{
     width: 100%;
     height: 300px;
-    max-width: 700px;
     margin:30px auto;
     font-size: 2em;
     text-align: center;
@@ -15,7 +14,7 @@ body,html{
     border-radius: 5%;
     box-shadow: 0em 0em 0.5em  #0f0 inset;
     display: inline;
-    padding:30px;
+    padding:2.5%;
     margin-left:5px;
 }
 @media screen and (max-width:700px){
@@ -25,7 +24,6 @@ body,html{
     .clock{
         width: 100%;
         height: 100px;
-        max-width: 100%;
         margin:30px auto;
         font-size: 15px;
         text-align: center;
@@ -36,7 +34,7 @@ body,html{
         border-radius: 5%;
         box-shadow: 0em 0em 1em  #0f0 inset;
         display: inline;
-        padding:30px;
+        padding:6%;
         margin-left:3px;
     }
 }
